--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,24 +2,24 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
     android:background="@android:color/black">
-
     <!-- Title -->
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_semibold"
         android:text="Rastreamento de Localização"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="#FFFFFF"
-        android:fontFamily="sans-serif-medium"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Card for Location -->
     <androidx.cardview.widget.CardView
@@ -38,24 +38,27 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="16dp"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:background="#FFFF">
+
 
             <ImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:src="@android:drawable/ic_menu_mylocation"
-                app:tint="#3F51B5" />
+                app:tint="#121212" />
 
             <TextView
                 android:id="@+id/locationTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Localização: Aguardando..."
-                android:textSize="18sp"
-                android:textColor="#212121"
                 android:layout_marginStart="16dp"
-                android:fontFamily="sans-serif"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:background="#FFF"
+                android:fontFamily="@font/poppins"
+                android:text="Localização: Aguardando..."
+                android:textColor="#212121"
+                android:textSize="18sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -76,25 +79,28 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="16dp"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:background="#FFFF">
 
             <ImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:src="@android:drawable/ic_media_play"
-                app:tint="#FF5722" />
+                app:tint="#FF0000" />
 
             <TextView
                 android:id="@+id/speedTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Velocidade: Aguardando..."
-                android:textSize="18sp"
-                android:textColor="#212121"
                 android:layout_marginStart="16dp"
-                android:fontFamily="sans-serif"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:fontFamily="@font/poppins"
+                android:text="Velocidade: Aguardando..."
+                android:textColor="#212121"
+                android:textSize="18sp" />
+
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
     <!-- Buttons container -->
@@ -118,7 +124,7 @@
             android:layout_weight="1"
             android:backgroundTint="#4CAF50"
             android:textColor="@android:color/white"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="@font/poppins"
             android:layout_marginEnd="8dp"
             android:padding="12dp"/>
 
@@ -130,9 +136,10 @@
             android:layout_weight="1"
             android:backgroundTint="#F44336"
             android:textColor="@android:color/white"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="@font/poppins"
             android:layout_marginStart="8dp"
             android:padding="12dp"/>
+
     </LinearLayout>
 
     <!-- MapView -->
@@ -142,9 +149,24 @@
         android:layout_height="0dp"
         android:layout_marginTop="24dp"
         android:background="#ECEFF1"
-        app:layout_constraintTop_toBottomOf="@id/buttonContainer"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/buttonContainer" />
+
+    <Button
+        android:id="@+id/btnNext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Race"
+        android:backgroundTint="#000000"
+        android:textColor="@android:color/white"
+        android:fontFamily="@font/poppins"
+        app:layout_constraintBottom_toBottomOf="@+id/mapView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/mapView"
+        app:layout_constraintVertical_bias="0.972" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
